--- a/playstation-store/package.json
+++ b/playstation-store/package.json
@@ -18,6 +18,10 @@
     "@angular/platform-browser": "^14.1.0",
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
+    "bootstrap": "^4.1.3",
+    "jquery": "^3.3.1",
+    "ngx-bootstrap": "^0.0.1",
+    "popper.js": "^1.14.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
